--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -1,90 +1,30 @@
 
 body{
     margin: 0px;
-    background-color: rgb(29, 37, 40);
+    font-family: 'Chewy', cursive;
 }
 
 h1{
     background-color: rgb(20, 55, 67);
     text-align: center;
-    color: lightblue;
+    color: rgb(0, 188, 251);
     padding: 20px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
 
-h2{
+
+
+#statusMessage{
     text-align: center;
-    padding: 10px;
-    color: lightblue;
-    background-color: rgb(0, 85, 95);
-    border-radius: 10px;
-    margin-top: 10px;
-    
-}
-
-
-
-#btnGroup1{
-    width: 300px;
-    height: 50px;
-    margin-top: 10px;
-}
-
-#Xlabel{
-    font-size: 1.6rem;
-    line-height: 30px;
-    font-weight: bold;
-    border: 1px solid black;
-}
-
-#Olabel{
-    font-size: 1.6rem;
-    line-height: 30px;
-    font-weight: bold;
-    border: 1px solid black;
-}
-
-
-#btnGroup2{
-    width: 300px;
-    height: 50px;
-    margin-top: 10px;
+    color: lightseagreen;
+    font-family: 'Chewy', cursive;
+    font-size: 1.5rem;
 
 }
 
-#X2label{
-    font-size: 1.6rem;
-    line-height: 30px;
-    font-weight: bold;
-    border: 1px solid black;
-}
-
-#O2label{
-    font-size: 1.6rem;
-    line-height: 30px;
-    font-weight: bold;
-    border: 1px solid black;
-
-}
-
-.playerOneBox{
-    padding: 20px;
-    height: 80vh;
-    background-color: lightblue;
-    border-top-right-radius:20px ;
-    border-bottom-right-radius:20px ;
-}
-.playerTwoBox{
-    height: 80vh;
-    padding: 20px;
-    background-color: lightblue;
-    border-top-left-radius:20px ;
-    border-bottom-left-radius:20px ;
-}
-
-
-.col-6{
+.col{
+    justify-content: center;
     width: auto;
     display: flex;   
 }
@@ -98,6 +38,7 @@ h2{
     font-size: 50px;
     text-align: center;
     line-height: 100px;
+    cursor: pointer;
 }
 
 
@@ -106,4 +47,5 @@ h2{
     width: 8rem;
     color: aliceblue;
     height: 8rem;
+    
 }
