--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -39,6 +39,7 @@ h1{
     text-align: center;
     line-height: 100px;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 
@@ -48,4 +49,57 @@ h1{
     color: aliceblue;
     height: 8rem;
     
+}
+.scoreBoard{
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    margin-bottom: 10px;
+
+}
+
+.playerOneScoreBoard, .playerTwoScoreBoard{
+    border: 3px solid rgb(0, 0, 0);
+    padding: 10px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 5px;
+    background-color: lightseagreen;
+    width: 180px;
+    margin-left: 24px;
+}
+
+
+.name1, .name2{
+    font-size: 1.2rem;
+    font-family: 'Chewy', cursive;
+    border-bottom: 1px solid black;
+    display: block;
+}
+.score1, .score2{
+    font-size: 1.8rem;
+    font: bold;
+    font-family: 'Chewy', cursive;
+
+}
+
+.btnOption{
+    display: flex;
+    justify-content: center;
+    
+}
+
+#resetScores, #resetBoard{
+    background-color: lightseagreen;
+    color: black;
+    font-family: 'Chewy', cursive;
+    margin: 10px;
+    width: 30%;
+
+}
+
+.cell{
+    transition: background-color 0.5s ease;
+    font-family: 'Chewy', cursive;
+
 }
